--- a/docker/ak-arches/dockerfile
+++ b/docker/ak-arches/dockerfile
@@ -37,6 +37,18 @@ RUN	npm install -g yarn
 
 RUN python -m pip install --upgrade pip
 
+
+## Install Postgresql client
+RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" >> /etc/apt/sources.list.d/pgdg.list &&\
+	wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - &&\
+	apt-get update -y &&\
+	apt-get install -y postgresql-client-9.6
+
+
+## Clean up obsolete folders and packages
+RUN rm -rf /var/lib/apt/lists/*
+RUN rm -rf /tmp/*
+
 RUN mkdir -p /opt/services
 WORKDIR /opt/services
 
