--- a/docker/ak-arches/dockerfile
+++ b/docker/ak-arches/dockerfile
@@ -1,5 +1,11 @@
 FROM ubuntu:xenial 
 
+RUN mkdir -p /opt/services
+## Setting default environment variables
+ENV WEB_ROOT=/opt/services
+ENV AK_NAME=akarches
+ENV AK_ROOT=${WEB_ROOT}/AK_NAME
+
 # build a container to run Arches in a similar way to how the buildpack containers are built
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
@@ -49,8 +55,10 @@ RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ xenial-pgdg main" >> /etc
 RUN rm -rf /var/lib/apt/lists/*
 RUN rm -rf /tmp/*
 
-RUN mkdir -p /opt/services
-WORKDIR /opt/services
+
+WORKDIR $WEB_ROOT
+
+RUN pwd
 
 # arches does not install the version of django it depends on
 RUN pip install arches==4.3.1 --no-binary :all:
@@ -58,3 +66,18 @@ RUN pip install arches==4.3.1 --no-binary :all:
 RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 whitenoise==4.1
 
 RUN arches-project create akarches
+
+# copy any custom src files for akarches from current dir to the location they need to be
+COPY ./src ${AK_ROOT}/src
+
+
+EXPOSE 8000
+
+COPY init.sh /usr/local/bin/
+	
+RUN chmod u+x /usr/local/bin/init.sh
+# Set entrypoint
+ENTRYPOINT ["init.sh"]
+
+# TODO get init tidied up then uncomment below
+#CMD ["run_arches"]
