--- a/docker/ak-arches/dockerfile
+++ b/docker/ak-arches/dockerfile
@@ -1,10 +1,11 @@
 FROM ubuntu:xenial 
 
-RUN mkdir -p /opt/services
 ## Setting default environment variables
-ENV WEB_ROOT=/opt/services
+ENV WEB_ROOT=/web_root
 ENV AK_NAME=akarches
 ENV AK_ROOT=${WEB_ROOT}/AK_NAME
+
+RUN mkdir ${WEB_ROOT}
 
 # build a container to run Arches in a similar way to how the buildpack containers are built
 
@@ -58,8 +59,6 @@ RUN rm -rf /tmp/*
 
 WORKDIR $WEB_ROOT
 
-RUN pwd
-
 # arches does not install the version of django it depends on
 RUN pip install arches==4.3.1 --no-binary :all:
 
@@ -67,7 +66,13 @@ RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 whitenoi
 
 RUN arches-project create akarches
 
-# copy any custom src files for akarches from current dir to the location they need to be
+RUN pwd
+RUN ls
+
+#TODO: copy any custom src files for akarches from a src dir to the location they need to be
+
+RUN mkdir -p ${AK_ROOT}/src
+
 COPY ./src ${AK_ROOT}/src
 
 
