--- a/docker/ak-arches/dockerfile
+++ b/docker/ak-arches/dockerfile
@@ -62,7 +62,7 @@ WORKDIR $WEB_ROOT
 # arches does not install the version of django it depends on
 RUN pip install arches==4.3.1 --no-binary :all:
 
-RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 django-guardian==1.4.9 whitenoise==4.1 
+RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 whitenoise==4.1 django-guardian==1.4.9 django-recaptcha==1.4.0
 
 RUN arches-project create ${APP_NAME}
 
