--- a/docker/ak-arches/dockerfile
+++ b/docker/ak-arches/dockerfile
@@ -62,7 +62,12 @@ WORKDIR $WEB_ROOT
 # arches does not install the version of django it depends on
 RUN pip install arches==4.3.1 --no-binary :all:
 
-RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 whitenoise==4.1 django-guardian==1.4.9 django-recaptcha==1.4.0
+# Note that django-oauth-toolkit==1.1.2 is the latest version that will work with django==1.11
+# django-oauth-toolkit==1.2.0 requires django >=2.0
+RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 whitenoise==4.1 django-guardian==1.4.9 django-recaptcha==1.4.0 \
+	django-revproxy==0.9.15 django-cors-headers==2.4.0 django-oauth-toolkit==1.1.2 rdflib==4.2.2 \
+	python-dateutil==2.7.3 edtf==4.0.1
+
 
 RUN arches-project create ${APP_NAME}
 
