--- a/docker/ak-arches/dockerfile
+++ b/docker/ak-arches/dockerfile
@@ -66,7 +66,8 @@ RUN pip install arches==4.3.1 --no-binary :all:
 # django-oauth-toolkit==1.2.0 requires django >=2.0
 RUN pip install django==1.11.16 gunicorn==19.9.0 psycopg2-binary==2.7.5 whitenoise==4.1 django-guardian==1.4.9 django-recaptcha==1.4.0 \
 	django-revproxy==0.9.15 django-cors-headers==2.4.0 django-oauth-toolkit==1.1.2 rdflib==4.2.2 \
-	python-dateutil==2.7.3 edtf==4.0.1
+	python-dateutil==2.7.3 edtf==4.0.1 elasticsearch==5.5.3 pyprind==2.11.2 PyLD[requests]==1.0.3 \
+	TileStache==1.51.13 couchdb==1.2 python-jose==2.0.2 pycryptodome==3.6.6
 
 
 RUN arches-project create ${APP_NAME}
