--- a/docker/chi-arches/chia/arches/install/requirements.txt
+++ b/docker/chi-arches/chia/arches/install/requirements.txt
@@ -21,7 +21,7 @@ PyLD[requests]==1.0.3
 pyprind==2.11.2
 pycryptodome<4.0.0,>=3.3.1
 whitenoise==4.1
-django-storages[azure]==1.7.1
+django-storages-azure==1.6.8
 azure==4.0.0
 azure-storage==0.20.0
 azure-servicebus==0.21.0
